<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="call">Llamar</string>

    <string name="all">Todos</string>

    <string name="pendings">Pendientes</string>

    <string name="show_menu">Más</string>

    <string name="client">Cliente</string>
    <string name="client_information">Client information</string>
    <string name="status">status</string>

    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="deliver">Entregar</string>
    <string name="clear">Limpiar</string>
    <string name="delete_order">Eliminar</string>

    <string name="add">Añadir</string>

    <string name="backup">Respaldar datos</string>
    <string name="restore">Restaurar datos</string>


    <string name="app_name">Servicio Celular</string>
    <string name="hello_world">Hello world!</string>
	<string name="servicell_system">Servicio Celular</string>
	<string name="search">Búsqueda</string>

</resources>
