<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:tag="menu"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/sidemargin"
		android:gravity="top|left"
	>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_margin="@dimen/menu_text_spacing"
			android:textColor="@color/menuTitleText"
			android:id="@+id/menuTitlev"/>


		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/backupMenu">

			<ImageView
				android:src="@drawable/outline_backup_black_24"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/menu_icons_spacing"
				android:tint="@color/menu_backup"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/backup"
				android:layout_margin="@dimen/menu_text_spacing"
				android:layout_marginLeft="0dp"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/restoremenu">

			<ImageView
				android:src="@drawable/outline_restore_black_24"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/menu_icons_spacing"
				android:tint="@color/menu_restore"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/restore"
				android:layout_margin="@dimen/menu_text_spacing"
				android:layout_marginLeft="0dp"/>

		</LinearLayout>

	</LinearLayout>

