<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:id="@+id/row"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:elevation="3dp">

	<FrameLayout
		android:id="@+id/card_background"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_margin="16dp">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<FrameLayout
				android:id="@+id/pitt_frame"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content">

				<com.servicel.system.drawables.CircularProgressBar
					xmlns:circular="http://schemas.android.com/apk/res-auto"
					android:id="@+id/circularProgressBar"
					style="@style/Widget.ProgressBar.Holo.CircularProgressBar"
					android:layout_width="56dp"
					android:layout_height="56dp"
					circular:cpb_strokeWidth="4"
					circular:cpb_progressColor="#FF9100"
					circular:cpb_backgroundColor="#401b2732"
					android:layout_gravity="center"/>

				<ImageView
					android:id="@+id/statusImage"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:src="@drawable/baseline_check_white_24"
					android:layout_gravity="center"
					android:tint="#00FFFFFF"/>

			</FrameLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="vertical"
				android:layout_gravity="left|center_vertical">

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:id="@+id/clientNameRow"
					android:textColor="#000000"
					android:textSize="16sp"
					android:paddingRight="16dp"
					android:text="@string/client"
					android:alpha="1.0"
					android:paddingLeft="16dp"/>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:id="@+id/info"
					android:textColor="@color/rowInfo"
					android:textSize="12sp"
					android:paddingRight="16dp"
					android:maxLength="35"
					android:paddingLeft="16dp"
					android:text="@string/client_information"/>

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:id="@+id/rowStatus"
					android:textColor="@color/rowInfo"
					android:textSize="12sp"
					android:paddingRight="16dp"
					android:maxLength="35"
					android:paddingLeft="16dp"
					android:text="@string/status"/>

			</LinearLayout>

		</LinearLayout>

	</FrameLayout>

</LinearLayout>

