<?xml version="1.0" encoding="utf-8"?>
<nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/drawer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:marginFactor="0.4"
	android:background="@color/menuBackground"
	>
	
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:tag="menu"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="@dimen/sidemargin"
		android:gravity="top|left"
	>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_margin="@dimen/menu_text_spacing"
			android:textColor="@color/menuTitleText"
			android:id="@+id/menuTitlev"/>


		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/backupMenu">

			<ImageView
				android:src="@drawable/outline_backup_black_24"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/menu_icons_spacing"
				android:tint="@color/menu_backup"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/backup"
				android:layout_margin="@dimen/menu_text_spacing"
				android:layout_marginLeft="0dp"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/restoremenu">

			<ImageView
				android:src="@drawable/outline_restore_black_24"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/menu_icons_spacing"
				android:tint="@color/menu_restore"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/restore"
				android:layout_margin="@dimen/menu_text_spacing"
				android:layout_marginLeft="0dp"/>

		</LinearLayout>

	</LinearLayout>
	
	<android.support.design.widget.CoordinatorLayout
		android:id="@+id/coordinator_layout"
		android:tag="content"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/primary">

			<android.support.v7.widget.Toolbar
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:theme="@style/ToolbarTheme"
				app:titleTextAppearance="@style/Toolbar.TitleText"
				android:elevation="0dp"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:elevation="0dp"
					android:gravity="left|center_vertical"
					android:layout_marginLeft="@dimen/sidemargin"
					android:layout_marginRight="@dimen/sidemargin"
				>


					<TextView
						android:text="@string/app_name"
						android:id="@+id/toolbar_title"
						android:layout_marginLeft="@dimen/sidemargin"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/toolbartext"
						android:gravity="left"
						android:textSize="21sp"
						android:textStyle="bold"/>

					<com.libizo.CustomEditText
						android:id="@+id/edSearch"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="@dimen/searchpadding"
						android:hint="@string/search"
						android:inputType="textNoSuggestions"
						app:libIZO_clearIconTint="@color/clearIcon"
						app:libIZO_setBackgroundColor="@color/edTextColor"
						app:libIZO_setBorderView="true"
						app:libIZO_setClearIconVisible="true"
						app:libIZO_setCornerRadius="48dp"
						app:libIZO_setStrokeWidth="0dp"/>

				</LinearLayout>

			</android.support.v7.widget.Toolbar>

			<android.support.v7.widget.RecyclerView
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:id="@+id/recycler"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

			</android.support.v7.widget.RecyclerView>




		</LinearLayout>

		
	
		<android.support.design.widget.BottomNavigationView
			android:id="@+id/navigationmain"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="?android:attr/windowBackground"
			app:itemBackground="@color/bgBottomNavigation"
			android:foreground="?attr/selectableItemBackground"
			app:itemIconTint="@color/iconBottomBar"
			app:itemTextColor="@color/textBottomBar"
			app:menu="@menu/mainnavigation"/>
	</android.support.design.widget.CoordinatorLayout>
	
</nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout>
